# fgen-example

./: .cmakelang.yaml  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: bump.yaml  ci.yaml  deploy.yaml  install.yaml  release.yaml  wheels.yaml
changelog/: 1.improvement.md  2.improvement.md  3.improvement.md  4.improvement.md  5.trivial.md  6.trivial.md  7.improvement.md  README.md
cmake/: Findfgen.cmake
docs/source/: changelog.md  conf.py  development.md  index.md  notebooks.md
docs/source/api/: fgen_example.derived_type.rst  fgen_example.operations.rst  fgen_example.rst
docs/source/notebooks/: basic-demo.py
scripts/: test-install.py
src/fgen_example/: __init__.py  derived_type.py  operations.py
src/fgen_example/_lib/: CMakeLists.txt  derived_type.f90  derived_type.yaml  derived_type_manager.f90  derived_type_wrapped.f90  operations.f90  operations.yaml  operations_manager.f90  operations_wrapped.f90  two_layer_model.f90  two_layer_model.yaml  two_layer_model_solver.f90  two_layer_model_solver.yaml
tests/unit/: test_wrapper.py
